--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -43,3 +43,47 @@ python-dateutil~=2.9.0.post0
 starlette~=0.46.2
 psycopg2-binary~=2.9.10
 pycparser~=2.22
+packaging~=25.0
+bleach~=6.2.0
+attrs~=25.3.0
+tornado~=6.5
+Jinja2~=3.1.6
+pyzmq~=26.4.0
+pexpect~=4.9.0
+parso~=0.8.4
+jedi~=0.19.2
+Pygments~=2.19.1
+yarg~=0.1.9
+webencodings~=0.5.1
+tinycss2~=1.4.0
+ipython~=8.12.3
+MarkupSafe~=3.0.2
+plotly~=6.1.1
+narwhals~=1.40.0
+traitlets~=5.14.3
+stack-data~=0.6.3
+decorator~=5.2.1
+matplotlib-inline~=0.1.7
+backcall~=0.2.0
+pickleshare~=0.7.5
+jupyter_client~=8.6.3
+prompt_toolkit~=3.0.51
+wcwidth~=0.2.13
+ptyprocess~=0.7.0
+docopt~=0.6.2
+nbformat~=5.10.4
+jupyter_core~=5.7.2
+nbclient~=0.10.2
+fastjsonschema~=2.21.1
+jsonschema~=4.23.0
+asttokens~=3.0.0
+executing~=2.2.0
+nbconvert~=7.16.6
+pandocfilters~=1.5.1
+defusedxml~=0.7.1
+mistune~=3.1.3
+jupyterlab_pygments~=0.3.0
+pure_eval~=0.2.3
+referencing~=0.36.2
+jsonschema-specifications~=2025.4.1
+platformdirs~=4.3.8
