--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -43,7 +43,7 @@ python-dateutil~=2.9.0.post0
 starlette~=0.46.2
 psycopg2-binary~=2.9.10
 pycparser~=2.22
-packaging~=25.0
+packaging>=24.2
 bleach~=6.2.0
 attrs~=25.3.0
 tornado~=6.5
@@ -87,3 +87,57 @@ pure_eval~=0.2.3
 referencing~=0.36.2
 jsonschema-specifications~=2025.4.1
 platformdirs~=4.3.8
+pillow>=11.2.1
+protobuf>=5.29.5
+setuptools>=80.8.0
+grpcio>=1.71.0
+PyYAML>=6.0.2
+multidict>=6.4.4
+propcache>=0.3.1
+faiss-cpu>=1.11.0
+torch>=2.7.0
+scipy>=1.15.3
+zstandard>=0.23.0
+proto-plus>=1.26.1
+regex>=2024.11.6
+threadpoolctl>=3.6.0
+mpmath>=1.3.0
+sympy>=1.14.0
+filelock>=3.18.0
+tqdm>=4.67.1
+triton>=3.3.0
+networkx>=3.4.2
+fsspec>=2025.5.0
+aiohttp>=3.11.18
+yarl>=1.20.0
+grpcio-status>=1.71.0
+joblib>=1.5.0
+orjson>=3.10.18
+SQLAlchemy>=2.0.41
+aiosignal>=1.3.2
+frozenlist>=1.6.0
+aiohappyeyeballs>=2.6.1
+scikit-learn>=1.6.1
+filetype>=1.2.0
+greenlet>=3.2.2
+tenacity>=9.1.2
+langchain-core>=0.3.62
+langchain>=0.3.25
+langchain-community>=0.3.24
+langsmith>=0.3.42
+langchain-text-splitters>=0.3.8
+requests-toolbelt>=1.0.0
+jsonpointer>=3.0.0
+tokenizers>=0.21.1
+marshmallow>=3.26.1
+safetensors>=0.5.3
+transformers>=4.52.3
+huggingface-hub>=0.31.4
+jsonpatch>=1.33
+typing-inspect>=0.9.0
+dataclasses-json>=0.6.7
+pydantic-settings>=2.9.1
+mypy_extensions>=1.1.0
+httpx-sse>=0.4.0
+sentence-transformers>=4.1.0
+langchain-google-genai>=2.1.5
