--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
         "recharts": "^2.15.3",
         "redux": "^5.0.1",
         "redux-thunk": "^3.1.0",
+        "swiper": "^11.2.8",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
