--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@radix-ui/react-dialog": "^1.1.14",
         "@reduxjs/toolkit": "^2.7.0",
         "@testing-library/dom": "^10.4.0",
         "@testing-library/jest-dom": "^6.6.3",
